--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,1 +1,30 @@
-<p>cadastro works!</p>
+<!--header -->
+<div class="jumbotron jumbotron-fluid">
+    <div class="container">
+      <h1 class="display-4">SIC - Atendimento e controle</h1>
+      <p class="lead">Sistema de atendimento e controle para indústria de mineração!</p>
+      <a class="btn btn-danger" routerLink="acessar">Cadastre-se aqui!</a>
+    </div>
+  </div>
+
+<div class="container">
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-sm-6">
+  <form>
+      <div class="form-group">
+        <label for="exampleInputEmail1">Usuário</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="email ou usuário">
+        <small id="emailHelp" class="form-text text-muted">Inserir o usuário cadastrado!</small>
+      </div>
+      <div class="form-group">
+        <label for="exampleInputPassword1">Password</label>
+        <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
+      </div>
+      <button type="submit" class="btn btn-primary">Acessar</button>
+    </form>
+  </div>
+    
+</div>
+
+</div>
