--- a/src/app/acessar/acessar.component.html
+++ b/src/app/acessar/acessar.component.html
@@ -1,1 +1,49 @@
-<p>acessar works!</p>
+<div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Fluid jumbotron</h1>
+          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+        </div>
+</div>
+
+<dir class="container">
+    <div class="row">
+        <div class="col-md-3"></div>
+        <div class="col-md-6">
+            <form>
+                <div class="form-group">
+                  <label for="inputNome">Nome</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="insira seu nome">
+                  <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                </div>
+               
+                <div class="form-group">
+                  <label for="inputEmail">e-mail</label>
+                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                </div>
+
+                <div class="form-group">
+                    <label for="inputEmail">e-mail</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                  </div>
+                  
+                  <div class="form-group">
+                    <label for="inputEmail">e-mail</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                  </div>
+
+                  <div class="form-group">
+                    <label for="inputEmail">e-mail</label>
+                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                  </div>
+
+                <div class="form-group form-check">
+                  <input type="checkbox" class="form-check-input" id="checkPrivate">
+                  <label class="form-check-label" for="exampleCheck1">Aceita os termos de privacidade</label>
+                </div>
+                <button type="submit" class="btn btn-primary">Cadastrar</button>
+              </form>
+        </div>
+        <div class="col-md-3"></div>
+
+    </div>
+</dir>
