correções de interface

--- a/src/app/acessar/acessar.component.html
+++ b/src/app/acessar/acessar.component.html
@@ -40,7 +40,7 @@
                   <input type="checkbox" class="form-check-input" id="checkPrivate">
                   <label class="form-check-label" for="exampleCheck1">Aceita os termos de privacidade</label>
                 </div>
-                <button type="submit" class="btn btn-primary">Cadastrar</button>
+                <a type="submit" class="btn btn-primary">Cadastrar</a>
               </form>
         </div>
         <div class="col-md-3"></div>
