--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -21,7 +21,7 @@
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
       </div>
-      <button type="submit" class="btn btn-primary">Acessar</button>
+      <a routerLink="logado" class="btn btn-primary">Cadastrar</a>
     </form>
   </div>
     
