screen of logado

--- a/src/app/logado/logado.component.html
+++ b/src/app/logado/logado.component.html
@@ -1,1 +1,17 @@
-<p>logado works!</p>
+<!--header -->
+<div class="jumbotron jumbotron-fluid">
+        <div class="container">
+          <h1 class="display-4">Olá, Rafael</h1>
+          <small>Seja bem vindo ao sistema de controle e atendimento</small>
+        </div>
+      </div>
+
+    <div class="container">
+    <div class="row">
+      <div class="col-sm-12">
+            <a class="btn btn-danger" routerLink="acessar">Cadastrar Barragem</a>
+            <a class="btn btn-danger" routerLink="acessar" style="margin-left: 10px">Cadastrar Processo</a>
+      </div>
+    </div>
+    
+    </div>
