--- a/src/app/logado/logado.component.html
+++ b/src/app/logado/logado.component.html
@@ -9,7 +9,7 @@
     <div class="container">
     <div class="row">
       <div class="col-sm-12">
-            <a class="btn btn-danger" routerLink="acessar">Cadastrar Barragem</a>
+            <a class="btn btn-danger" routerLink="barragem">Cadastrar Barragem</a>
             <a class="btn btn-danger" routerLink="acessar" style="margin-left: 10px">Cadastrar Processo</a>
       </div>
     </div>
