--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -1,9 +1,14 @@
+
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" style="margin-left: 40%" routerLink="/"><img src="../../assets/logo.png" style="height: 35px" style="width: 35px"></a>
+</div>
+
 <!--header -->
 <div class="jumbotron jumbotron-fluid">
     <div class="container">
       <h1 class="display-4">SIC - Atendimento e controle</h1>
-      <p class="lead">Sistema de atendimento e controle para indústria de mineração!</p>
-      <a class="btn btn-danger" routerLink="acessar">Cadastre-se aqui!</a>
+      <p class="lead">Sistema de integrado e controle para indústria de mineração!</p>
+      <a class="btn btn-danger btn-lg" routerLink="acessar">Cadastre-se aqui!</a>
     </div>
   </div>
 
@@ -21,7 +26,7 @@
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
       </div>
-      <a routerLink="logado" class="btn btn-primary">Cadastrar</a>
+      <a routerLink="logado" class="btn btn btn-success btn-lg">Cadastrar</a>
     </form>
   </div>
     
