--- a/src/app/logado/logado.component.html
+++ b/src/app/logado/logado.component.html
@@ -1,16 +1,22 @@
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" style="margin-left: 40%" routerLink="/logado"><img src="../../assets/logo.png" style="height: 35px" style="width: 35px"></a>
+</div>
+
 <!--header -->
 <div class="jumbotron jumbotron-fluid">
         <div class="container">
           <h1 class="display-4">Olá, Rafael</h1>
-          <small>Seja bem vindo ao sistema de controle e atendimento</small>
+          <p class="lead">Seja bem vindo ao sistema integrado de controle para indústria de mineracão</p>
+          <a class="btn btn-danger" routerLink="/">SAIR</a>
+
         </div>
       </div>
 
     <div class="container">
     <div class="row">
       <div class="col-sm-12">
-            <a class="btn btn-danger" routerLink="barragem">Cadastrar Barragem</a>
-            <a class="btn btn-danger" routerLink="acessar" style="margin-left: 10px">Cadastrar Processo</a>
+            <a class="btn btn-success" routerLink="barragem">Cadastrar Barragem</a>
+            <a class="btn btn-success" routerLink="processo" style="margin-left: 10px">Cadastrar Processo</a>
       </div>
     </div>
     
