--- a/src/app/acessar/acessar.component.html
+++ b/src/app/acessar/acessar.component.html
@@ -1,7 +1,10 @@
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" style="margin-left: 40%" routerLink="/"><img src="../../assets/logo.png" style="height: 35px" style="width: 35px"></a>
+</div>
+
 <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Fluid jumbotron</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          <p class="lead">Olá, aqui você poderá realizar seu cadastro. Insira as informações abaixo</p>
         </div>
 </div>
 
@@ -11,36 +14,45 @@
         <div class="col-md-6">
             <form>
                 <div class="form-group">
-                  <label for="inputNome">Nome</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="insira seu nome">
-                  <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
+                  <label for="inputNome">CPF</label>
+                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="CPF">
                 </div>
                
                 <div class="form-group">
-                  <label for="inputEmail">e-mail</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                  <label for="inputEmail">Id da Empresa</label>
+                  <input type="text" class="form-control" id="exampleInputPassword1" placeholder="id da empresa">
                 </div>
 
                 <div class="form-group">
-                    <label for="inputEmail">e-mail</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                    <label for="inputEmail">Nome do usuário</label>
+                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Nome completo">
                   </div>
                   
                   <div class="form-group">
-                    <label for="inputEmail">e-mail</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                    <label for="inputEmail">Id Funcionário</label>
+                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="codFunc">
                   </div>
 
                   <div class="form-group">
-                    <label for="inputEmail">e-mail</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                    <label for="inputEmail">Username</label>
+                    <input type="text" class="form-control" id="exampleInputPassword1" placeholder="username">
                   </div>
+
+                  <div class="form-group">
+                      <label for="inputEmail">Password</label>
+                      <input type="password" class="form-control" id="exampleInputPassword1" placeholder="password">
+                    </div>
+
+                    <div class="form-group">
+                        <label for="inputEmail">Atividade da empresa</label>
+                        <input type="text" class="form-control" id="exampleInputPassword1" placeholder="atividade">
+                      </div>
 
                 <div class="form-group form-check">
                   <input type="checkbox" class="form-check-input" id="checkPrivate">
                   <label class="form-check-label" for="exampleCheck1">Aceita os termos de privacidade</label>
                 </div>
-                <a type="submit" class="btn btn-primary">Cadastrar</a>
+                <a routerLink="/sucesso" class="btn btn-success btn-lg">Cadastrar</a>
               </form>
         </div>
         <div class="col-md-3"></div>
