--- a/src/app/barragem/barragem.component.html
+++ b/src/app/barragem/barragem.component.html
@@ -1,7 +1,11 @@
+<div class="navbar navbar-expand-lg navbar-light bg-light">
+    <a class="navbar-brand" style="margin-left: 40%" routerLink="/logado"><img src="../../assets/logo.png" style="height: 35px" style="width: 35px"></a>
+</div>
+
 <div class="jumbotron jumbotron-fluid">
         <div class="container">
-          <h1 class="display-4">Cadastrar Barragem</h1>
-          <p class="lead">This is a modified jumbotron that occupies the entire horizontal space of its parent.</p>
+          <h1 class="display-4">Barragens</h1>
+          <p class="lead">Cadastrar ou buscar barragem no sistema</p>
         </div>
 </div>
 
@@ -14,10 +18,8 @@
 
             <label for="inputNome">Buscar Barragem</label>
             <form class="form-inline">
-                <input class="form-control mr-sm-2" style="margin-right: 15px" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" (ng-click)="get_barragens()">GET /products</button>
-
-                <button class="btn btn-outline-success my-2 my-sm-0" (click)="enviar()">Buscar</button>
+                <input class="form-control mr-sm-2" style="margin-right: 15px" type="search" placeholder="ID">
+                <button class="btn btn-outline-success my-2 my-sm-0" ng-click="get_barragens()">Buscar</button>
             </form>
 
             <ul>
@@ -34,35 +36,49 @@
 
             <form>
                 <div class="form-group">
-                  <label for="inputNome">Nome</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="insira seu nome">
-                  <!-- <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small> -->
-                </div>
-               
-                <div class="form-group">
-                  <label for="inputEmail">e-mail</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                  <label for="inputNome">ID</label>
+                  <input type="text" class="form-control" id="exampleInputEmail1" placeholder="ID">
                 </div>
 
                 <div class="form-group">
-                    <label for="inputEmail">e-mail</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
+                    <label for="inputNome">Nome da barragem</label>
+                    <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Barragem">
                   </div>
+
+                  <div class="form-group">
+                      <label for="inputNome">Tipo</label>
+                      <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Tipo barragem">
+                    </div>
                   
-                  <div class="form-group">
-                    <label for="inputEmail">e-mail</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
-                  </div>
+                    <div class="form-group">
+                        <label for="inputNome">Estado</label>
+                        <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Localizacão da barragem">
+                      </div>
+                    
+                      <div class="form-group">
+                          <label for="inputNome">Empresa</label>
+                          <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Empresa que administtra a barragem">
+                        </div>
 
-                  <div class="form-group">
-                    <label for="inputEmail">e-mail</label>
-                    <input type="password" class="form-control" id="exampleInputPassword1" placeholder="e-mail">
-                  </div>
+                        <div class="form-group">
+                            <label for="inputNome">Equipamentos</label>
+                            <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Equipamentos instalados">
+                          </div>
+                        
 
-                <a type="submit" class="btn btn-primary">Cadastrar</a>
+                          <div class="form-group">
+                              <label for="inputNome">Legislação vigente</label>
+                              <input type="text" class="form-control" id="exampleInputEmail1" placeholder="Lei vigente para esta barragem">
+                            </div>
+
+                <a class="btn btn-success btn-lg">Cadastrar</a>
+
               </form>
         </div>
-        <div class="col-md-3"></div>
-
     </div>
-</dir>
+
+
+  
+
+  
+ 
