correção de bugs

--- a/src/app/cadastro/cadastro.component.html
+++ b/src/app/cadastro/cadastro.component.html
@@ -26,7 +26,7 @@
         <label for="exampleInputPassword1">Password</label>
         <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Senha">
       </div>
-      <a routerLink="logado" class="btn btn btn-success btn-lg">Cadastrar</a>
+      <a routerLink="logado" class="btn btn btn-success btn-lg">Acessar</a>
     </form>
   </div>
     
